Index画面の表示を調整

--- a/LanguageList/Views/LanguageMst/Index.cshtml
+++ b/LanguageList/Views/LanguageMst/Index.cshtml
@@ -4,32 +4,58 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="container">
+    <h2 class="text-center my-4">言語一覧</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.LanguageName)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LanguageName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+    <div class="row border-bottom mb-5">
+        <div class="col-md-3">
+            <a asp-action="Create">新規登録</a>
+            <a asp-action="#">終了</a>
+        </div>
+        <div class="col-md-6 d-flex justify-content-center mb-4">
+            <form asp-controller="LanguageMst" asp-action="Index">
+                <p>
+                    言語名：
+                    <input type="text" name="SearchString" />
+                    <button type="submit" class="btn btn-secondary">検索</button>
+                </p>
+            </form>
+        </div>
+    </div>
+    <table class="table mx-auto" style="width:60%;">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Id)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.LanguageName)
+                </th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+        @foreach (var item in Model) {
+            <tr>
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.Id">
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </a>
+                </td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.Id">
+                        @Html.DisplayFor(modelItem => item.LanguageName)
+                    </a>
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">編集</a>
+                </td>
+                <td>
+                    <a asp-action="Delete" asp-route-id="@item.Id">削除</a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
