--- a/LanguageList/Views/LanguageMst/Create.cshtml
+++ b/LanguageList/Views/LanguageMst/Create.cshtml
@@ -4,28 +4,24 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>LanguageMst</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="LanguageName" class="control-label"></label>
-                <input asp-for="LanguageName" class="form-control" />
-                <span asp-validation-for="LanguageName" class="text-danger"></span>
+<div class="container">
+    <div class="text-center my-4 fw-bold text-decoration-underline">新規登録</div>
+    <form asp-action="Create">
+        <div class="row border-bottom mb-4 d-flex justify-content-center">
+            <div class="col-md-4">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="LanguageName" class="control-label"></label>
+                    <input asp-for="LanguageName" class="form-control" />
+                    <span asp-validation-for="LanguageName" class="text-danger"></span>
+                </div>
+                <div class="form-group my-4 text-center">
+                    <button type="submit" class="btn btn-primary">確定</button>
+                    <button type="button" class="btn btn-secondary ms-4" onclick="location.href='/LanguageMst'">戻る</button>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
+        </div>
+    </form>
 </div>
 
 @section Scripts {
