--- a/LanguageList/Views/LanguageMst/Index.cshtml
+++ b/LanguageList/Views/LanguageMst/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageList.ViewModels.LanguageMstViewModel
+﻿@model LanguageList.ViewModels.LanguageListViewModel
 
 @{
     ViewData["Title"] = "Index";
