--- a/LanguageList/Views/LanguageMst/Index.cshtml
+++ b/LanguageList/Views/LanguageMst/Index.cshtml
@@ -45,20 +45,20 @@
                     <tbody>
                         @foreach (var item in Model.LanguageMst)
                         {
-                            <form asp-action="Edit" asp-route-id="@item.Id" method="post">
-                                <tr>
-                                    <td>
-                                        <a asp-action="Details" asp-route-id="@item.Id">
-                                            @Html.DisplayFor(modelItem => item.Id)
-                                        </a>
-                                    </td>
+                            
+                            <tr>
+                                <td>
+                                    <a asp-action="Details" asp-route-id="@item.Id">
+                                        @Html.DisplayFor(modelItem => item.Id)
+                                    </a>
+                                </td>
+                                <form asp-action="Edit" asp-route-id="@item.Id" method="post">
                                     <td>
                                         <div class="showDetail">
                                             @Html.DisplayFor(modelItem => item.LanguageName)
                                         </div>
                                         <div class="showForm">
                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                            <input type="hidden" asp-for="SelectName" />
                                             <div class="form-group">
                                                 <input asp-for="@item.LanguageName" class="form-control" name="languageName" />
                                                 <span asp-validation-for="@item.LanguageName" class="text-danger"></span>
@@ -71,11 +71,14 @@
                                             <a href="#" class="edit">編集</a>
                                         </div>
                                     </td>
+                                </form>
+                                <form asp-action="Delete" asp-route-id="@item.Id">
                                     <td>
-                                        <a asp-action="Delete" asp-route-id="@item.Id">削除</a>
+                                        <input type="submit" value="削除" class="delete" />
                                     </td>
-                                </tr>
-                            </form>
+                                </form>
+                            </tr>
+                            
                         }
                     </tbody>
                 </table>
