--- a/LanguageList/Views/LanguageMst/Index.cshtml
+++ b/LanguageList/Views/LanguageMst/Index.cshtml
@@ -13,7 +13,13 @@
     <div class="row border-bottom mb-5">
         <div class="col-md-3">
             <a asp-action="Create">新規登録</a>
-            <a asp-action="#">終了</a>
+            <!-- 初期表示時しか閉じない -->
+            <a href="#" onclick="window.close()">終了</a>
+            <script>
+                function closeWindow() {
+                    window.open('about:_blank', '_self').close()
+                }
+            </script>
         </div>
         <div class="col-md-6 d-flex justify-content-center mb-4">
             <form asp-controller="LanguageMst" asp-action="Search" method="get">
@@ -74,7 +80,7 @@
                                 </form>
                                 <form asp-action="Delete" asp-route-id="@item.Id">
                                     <td>
-                                        <input type="submit" value="削除" class="delete" />
+                                    <input type="submit" value="削除" class="delete" id="delete" onclick="return confirm('削除してよろしいですか');" />
                                     </td>
                                 </form>
                             </tr>
